@@ -6,68 +6,73 @@ import java.util.*;
 
 public class Pattern {
 
-    private Random rand;
     List<Plot> plots;
+    private Random rand;
 
-    public Pattern(){
+    public Pattern() {
         plots = new ArrayList<>();
         this.rand = new SecureRandom();
         generateRandomPattern();
     }
-    public Pattern(Pattern plots){
+
+    public Pattern(Pattern plots) {
         this.plots = new ArrayList<>();
         this.rand = new SecureRandom();
-        for(Plot plot : plots.getPlots()){
+        for (Plot plot : plots.getPlots()) {
             this.plots.add(new Plot(plot));
         }
     }
-    public Pattern(List<Plot> plots){
-            this.plots = plots;
+
+    public Pattern(List<Plot> plots) {
+        this.plots = plots;
     }
 
-    public void applyMask(Position position){
-        for (Plot plot : plots){
+    public void applyMask(Position position) {
+        for (Plot plot : plots) {
             plot.setPosition(plot.getPosition().plus(position));
         }
     }
 
-    public void add(Plot plot){
-        plots.add( plot);
+    public void add(Plot plot) {
+        plots.add(plot);
     }
 
-    public void rotate60Right(){
-        for (Plot plot : plots){
+    public void rotate60Right() {
+        for (Plot plot : plots) {
             plot.getPosition().rotate60Right();
         }
     }
 
-    public void translateLeft(){
-        for (Plot plot : plots){
+    public void translateLeft() {
+        for (Plot plot : plots) {
             plot.getPosition().translateLeft();
         }
     }
-    public void translateRight(){
-        for (Plot plot : plots){
+
+    public void translateRight() {
+        for (Plot plot : plots) {
             plot.getPosition().translateRight();
         }
     }
-    public void translateUp(){
-        for (Plot plot : plots){
+
+    public void translateUp() {
+        for (Plot plot : plots) {
             plot.getPosition().translateUP();
         }
     }
-    public void translateDown(){
-        for (Plot plot : plots){
+
+    public void translateDown() {
+        for (Plot plot : plots) {
             plot.getPosition().translateDown();
         }
     }
 
-    public List<Plot> getPlots(){
+    public List<Plot> getPlots() {
         return plots;
     }
 
-    public  int size(){
-        if(plots !=null)return plots.size();
+    public int size() {
+        if (plots != null) return plots.size();
         return 0;
     }
 
@@ -92,25 +97,25 @@ public class Pattern {
     }
 
     public void setAncerPoint(Position position) {
-        Position gap = new Position(0,0).minus(position);
-        for(Plot patternPlot : plots){
+        Position gap = new Position(0, 0).minus(position);
+        for (Plot patternPlot : plots) {
             Position newPosition = patternPlot.getPosition().plus(gap);
             patternPlot.setPosition(newPosition);
         }
     }
 
-    private void generateRandomPattern(){
-        List<Position> patternPositions = new ArrayList<>(Arrays.asList(new Position(0,0)));
-        for(int i=0; i<rand.nextInt(2,4) ; i++){
+    private void generateRandomPattern() {
+        List<Position> patternPositions = new ArrayList<>(List.of(new Position(0, 0)));
+        for (int i = 0; i < rand.nextInt(2, 4); i++) {
             Position position = patternPositions.get(rand.nextInt(patternPositions.size()));
             List<Position> neighboursPosition = position.closestPositions();
-            do{
+            do {
                 position = neighboursPosition.get(rand.nextInt(neighboursPosition.size()));
-            }while (patternPositions.contains(position));
+            } while (patternPositions.contains(position));
             patternPositions.add(position);
         }
-        for (Position position : patternPositions){
-            plots.add(new Plot( PlotType.values()[rand.nextInt(3)+1] , position));
+        for (Position position : patternPositions) {
+            plots.add(new Plot(PlotType.values()[rand.nextInt(3) + 1], position));
         }
     }
 }
