@@ -1,79 +1,80 @@
 package fr.cotedazur.univ.polytech.startingpoint.game;
 
-import fr.cotedazur.univ.polytech.startingpoint.*;
-import fr.cotedazur.univ.polytech.startingpoint.StatistiqueManager.*;
 import fr.cotedazur.univ.polytech.startingpoint.Map;
-import fr.cotedazur.univ.polytech.startingpoint.action.*;
-import fr.cotedazur.univ.polytech.startingpoint.bot.*;
+import fr.cotedazur.univ.polytech.startingpoint.*;
+import fr.cotedazur.univ.polytech.startingpoint.action.Action;
+import fr.cotedazur.univ.polytech.startingpoint.action.ActionType;
+import fr.cotedazur.univ.polytech.startingpoint.bot.BotProfil;
+import fr.cotedazur.univ.polytech.startingpoint.bot.Playable;
 import fr.cotedazur.univ.polytech.startingpoint.debug_Interface.MapInterface;
 import fr.cotedazur.univ.polytech.startingpoint.logger.Loggeable;
-import fr.cotedazur.univ.polytech.startingpoint.objective.*;
+import fr.cotedazur.univ.polytech.startingpoint.objective.Objective;
+import fr.cotedazur.univ.polytech.startingpoint.objective.ObjectiveGardener;
+import fr.cotedazur.univ.polytech.startingpoint.objective.ObjectivePanda;
+import fr.cotedazur.univ.polytech.startingpoint.objective.ObjectivePlots;
+import fr.cotedazur.univ.polytech.startingpoint.statistique_manager.StatistiqueManager;
 
 import java.security.SecureRandom;
 import java.util.*;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
 
 
 public class Game implements DeckSignal, Referee, Loggeable {
 
-    final static int MAX_NB_ROUND = 100;
-    final static int NB_OBJECTIVE_TO_FINISH = 9;
-    final static int NB_ACTIONS_PER_ROUND = 2;
+    static final int MAX_NB_ROUND = 100;
+    static final int NB_OBJECTIVE_TO_FINISH = 9;
+    static final int NB_ACTIONS_PER_ROUND = 2;
+    private final StatistiqueManager statistiqueManager;
     Random random;
     GameEngine gameEngine;
     List<BotProfil> botProfiles;
     MapInterface mapInterface;
     int nbActions;
     List<Action> previousActions;
-    public StatistiqueManager statistiqueManager;
     private int timeOutCounter;
     private int nombreObjectifNull;
 
-    public Game(){
-        this(null, null, false);
+    public Game() {
+        this(null, Arrays.asList(), false);
     }
-    public Game(StatistiqueManager statistiqueManager, List<BotProfil> botProfiles , boolean debug){
-        previousActions                 = new ArrayList<>();
-        Deck<Objective> objectiveDeck   = generateObjectiveDrawPile();
-        Deck<Plot> plotDeck             = generatePlotDrawPile();
-        gameEngine                     = new GameEngine( objectiveDeck, plotDeck, new Map());
-        this.botProfiles = botProfiles;
-        this.statistiqueManager= statistiqueManager;
-        this.timeOutCounter=0;
 
-        for(BotProfil botProfil : this.botProfiles){
+    public Game(StatistiqueManager statistiqueManager, List<BotProfil> botProfiles, boolean debug) {
+        this.random = new SecureRandom();
+        previousActions = new ArrayList<>();
+        Deck<Objective> objectiveDeck = generateObjectiveDrawPile();
+        Deck<Plot> plotDeck = generatePlotDrawPile();
+        gameEngine = new GameEngine(objectiveDeck, plotDeck, new Map());
+        this.botProfiles = botProfiles;
+        this.statistiqueManager = statistiqueManager;
+        this.timeOutCounter = 0;
+
+        for (BotProfil botProfil : this.botProfiles) {
             botProfil.getBot().setEnvirronement(this, gameEngine.getMap());
         }
 
-        if(debug){
+        if (debug) {
             mapInterface = new MapInterface();
             mapInterface.drawMap(gameEngine.getMap(), gameEngine.getGardenerPosition(), gameEngine.getPandaPosition());
-        }
-        else {
+        } else {
             mapInterface = null;
         }
     }
 
 
-
-    public boolean start(){
+    public boolean start() {
         do {
             ++timeOutCounter;
-            for(BotProfil botProfil : botProfiles){
+            for (BotProfil botProfil : botProfiles) {
                 nbActions = NB_ACTIONS_PER_ROUND;
                 WeatherType weather = gameEngine.drawWeather();
-                LOGGER .finest("Tour de " + botProfil.getBotName() + " : ");
-                this.applyChangesDueToWeather( weather);
+                LOGGER.finest("Tour de " + botProfil.getBotName() + " : ");
+                this.applyChangesDueToWeather(weather);
                 doActions(botProfil, nbActions, weather);
-                if(mapInterface != null) {
+                if (mapInterface != null) {
                     mapInterface.drawMap(gameEngine.getMap(), gameEngine.getGardenerPosition(), gameEngine.getPandaPosition());
                 }
             }
-            LOGGER.finest( () ->"Nombre de tours :" + this.nombreObjectifNull);
-        }while (!checkFinishingCondition());
+            LOGGER.finest(() -> "Nombre de tours :" + this.nombreObjectifNull);
+        } while (!checkFinishingCondition());
         BotProfil winner = checkWinner();
         printWinner(winner);
         return true;
@@ -82,22 +83,22 @@ public class Game implements DeckSignal, Referee, Loggeable {
     private void saveAction(Action action) {
         previousActions.add(action);
         Collections.rotate(previousActions, 1);
-        if(previousActions.size()>8){
-            previousActions.remove(previousActions.size()-1);
+        if (previousActions.size() > 8) {
+            previousActions.remove(previousActions.size() - 1);
         }
     }
 
-    public List<Action> getPreviousActions(){
+    public List<Action> getPreviousActions() {
         return previousActions;
     }
 
 
-    public void doActions(BotProfil botProfil, int nbActions, WeatherType weather){
+    public void doActions(BotProfil botProfil, int nbActions, WeatherType weather) {
         List<ActionType> banActionTypes = new ArrayList<>();
-        for(int i = 0; i < nbActions; i++) {
+        for (int i = 0; i < nbActions; i++) {
             Action action = botProfil.getBot().play(banActionTypes, weather);
-            LOGGER.finer(()-> "Action : " + action);
-            if (action!=null && !(banActionTypes.contains(action.toType()))){
+            LOGGER.finer(() -> "Action : " + action);
+            if (action != null && !(banActionTypes.contains(action.toType()))) {
                 action.play(this, gameEngine);
                 banActionTypes.add(action.toType());
                 action.verifyObjectiveAfterAction(this);
@@ -106,16 +107,16 @@ public class Game implements DeckSignal, Referee, Loggeable {
         }
     }
 
-    public void applyChangesDueToWeather(WeatherType weather){
-        if(weather==WeatherType.SUN){
+    public void applyChangesDueToWeather(WeatherType weather) {
+        if (weather == WeatherType.SUN) {
             ++this.nbActions;
         }
     }
 
-    public boolean checkFinishingCondition(){
-        for(BotProfil botProfil : botProfiles){
-            if(botProfil.getNbCompletedObjective() >= NB_OBJECTIVE_TO_FINISH)return true;
-            else if(this.timeOutCounter >= MAX_NB_ROUND) return true;
+    public boolean checkFinishingCondition() {
+        if (this.timeOutCounter >= MAX_NB_ROUND) return true;
+        for (BotProfil botProfil : botProfiles) {
+            if (botProfil.getNbCompletedObjective() >= NB_OBJECTIVE_TO_FINISH) return true;
         }
         return false;
     }
@@ -125,25 +126,24 @@ public class Game implements DeckSignal, Referee, Loggeable {
         gameEngine.regenerateDecks(generateObjectiveDrawPile(), generatePlotDrawPile());
     }
 
-    private Deck<Objective> generateObjectiveDrawPile(){
+    private Deck<Objective> generateObjectiveDrawPile() {
         Deck<Objective> objectiveDeck = new Deck<>(this);
         int upperRandForPlotType = 3;
 
-        for (int i=0 ; i<20 ; ++i){
-            objectiveDeck.addCard(new ObjectivePlots(random.nextInt(4)+1, new Pattern()));
+        for (int i = 0; i < 20; ++i) {
+            objectiveDeck.addCard(new ObjectivePlots(random.nextInt(4) + 1, new Pattern()));
         }
-        for (int i=0 ; i<20 ; ++i){
+        for (int i = 0; i < 20; ++i) {
             int nbBambous = 4;
-            if(nbBambous == 3){
-                objectiveDeck.addCard(new ObjectiveGardener(random.nextInt(4)+1, nbBambous, PlotType.values()[random.nextInt(upperRandForPlotType)+1], false,random.nextInt(3)+2));
-            }
-            else {
-                objectiveDeck.addCard(new ObjectiveGardener(random.nextInt(4)+1, nbBambous, PlotType.values()[random.nextInt(upperRandForPlotType)+1], false,1));
+            if (nbBambous == 3) {
+                objectiveDeck.addCard(new ObjectiveGardener(random.nextInt(4) + 1, nbBambous, PlotType.values()[random.nextInt(upperRandForPlotType) + 1], false, random.nextInt(3) + 2));
+            } else {
+                objectiveDeck.addCard(new ObjectiveGardener(random.nextInt(4) + 1, nbBambous, PlotType.values()[random.nextInt(upperRandForPlotType) + 1], false, 1));
             }
 
         }
 
-        for (int i=0 ; i<20 ; ++i) {
+        for (int i = 0; i < 20; ++i) {
             ArrayList<Bambou> bambous = new ArrayList<>();
             for (int j = 0; j < (random.nextInt(2) + 2); ++j) {
                 bambous.add(new Bambou(PlotType.values()[random.nextInt(upperRandForPlotType) + 1]));
@@ -154,39 +154,39 @@ public class Game implements DeckSignal, Referee, Loggeable {
         return objectiveDeck;
     }
 
-    private Deck<Plot> generatePlotDrawPile(){
+    private Deck<Plot> generatePlotDrawPile() {
         Deck<Plot> plotDeck = new Deck<>(this);
         int upperRandForPlotType = 3;
 
-        for(int i=0 ; i<60 ; ++i){
-            plotDeck.addCard(new Plot(PlotType.values()[random.nextInt(upperRandForPlotType)+1]));
+        for (int i = 0; i < 60; ++i) {
+            plotDeck.addCard(new Plot(PlotType.values()[random.nextInt(upperRandForPlotType) + 1]));
         }
         plotDeck.shuffle();
         return plotDeck;
     }
 
-    public boolean pickObjective(fr.cotedazur.univ.polytech.startingpoint.bot.Playable bot){
-        Objective objective=  gameEngine.pickObjective();
-        for(BotProfil botProfil : botProfiles){
-            if(bot == botProfil.getBot()){
+    public boolean pickObjective(fr.cotedazur.univ.polytech.startingpoint.bot.Playable bot) {
+        Objective objective = gameEngine.pickObjective();
+        for (BotProfil botProfil : botProfiles) {
+            if (bot == botProfil.getBot()) {
                 botProfil.addObjective(objective);
-                LOGGER.finer( botProfil.getBotName() +" a prix un objectif :" + objective);
+                LOGGER.finer(() -> botProfil.getBotName() + " a prix un objectif :" + objective);
                 return true;
             }
         }
         return false;
     }
 
-    public List<Plot> pickPlot(){
+    public List<Plot> pickPlot() {
         return gameEngine.pickPlot();
     }
 
-    public boolean computeObjectivesPlot(Plot lastPlacedPlot){
+    public boolean computeObjectivesPlot(Plot lastPlacedPlot) {
         boolean result = false;
         ArrayList<Objective> validatedObjective = new ArrayList<>();
-        for(BotProfil botProfil : botProfiles){
-            for(Objective objective : botProfil.getObjectives()){
-                if(objective.verifyPlotObj(gameEngine, lastPlacedPlot)){
+        for (BotProfil botProfil : botProfiles) {
+            for (Objective objective : botProfil.getObjectives()) {
+                if (objective.verifyPlotObj(gameEngine, lastPlacedPlot)) {
                     String botName = botProfil.getBotName();
                     validatedObjective.add(objective);
                     botProfil.setObjectiveCompleted(objective);
@@ -194,17 +194,17 @@ public class Game implements DeckSignal, Referee, Loggeable {
                 }
             }
             botProfil.getObjectives().removeAll(validatedObjective);
-            if(!validatedObjective.isEmpty())result = true;
+            if (!validatedObjective.isEmpty()) result = true;
         }
         return result;
     }
 
-    public boolean computeObjectivesGardener(){
-        boolean result =false;
+    public boolean computeObjectivesGardener() {
+        boolean result = false;
         ArrayList<Objective> validatedObjective = new ArrayList<>();
-        for(BotProfil botProfil : botProfiles){
-            for(Objective objective : botProfil.getObjectives()){
-                if(objective.verifyGardenerObj(gameEngine)){
+        for (BotProfil botProfil : botProfiles) {
+            for (Objective objective : botProfil.getObjectives()) {
+                if (objective.verifyGardenerObj(gameEngine)) {
                     String botName = botProfil.getBotName();
                     validatedObjective.add(objective);
                     botProfil.setObjectiveCompleted(objective);
@@ -212,25 +212,26 @@ public class Game implements DeckSignal, Referee, Loggeable {
                 }
             }
             botProfil.getObjectives().removeAll(validatedObjective);
-            if(!validatedObjective.isEmpty()) result= true;
+            if (!validatedObjective.isEmpty()) result = true;
         }
         return result;
     }
 
-    public Position getGardenerPosition(){
+    public Position getGardenerPosition() {
         return gameEngine.getGardenerPosition();
     }
+
     public Position getPandaPosition() {
         return gameEngine.getPandaPosition();
     }
 
-    public boolean computeObjectivesPanda(){
+    public boolean computeObjectivesPanda() {
         boolean result = false;
         ArrayList<Objective> validatedObjective = new ArrayList<>();
 
-        for(BotProfil botProfil : botProfiles){
-            for(Objective objective : botProfil.getObjectives()){
-                if(objective.verifyPandaObj(gameEngine, botProfil)){
+        for (BotProfil botProfil : botProfiles) {
+            for (Objective objective : botProfil.getObjectives()) {
+                if (objective.verifyPandaObj(gameEngine, botProfil)) {
                     String botName = botProfil.getBotName();
                     validatedObjective.add(objective);
                     botProfil.setObjectiveCompleted(objective);
@@ -238,7 +239,7 @@ public class Game implements DeckSignal, Referee, Loggeable {
                 }
             }
             botProfil.getObjectives().removeAll(validatedObjective);
-            if(!validatedObjective.isEmpty()) result=true;
+            if (!validatedObjective.isEmpty()) result = true;
         }
         return result;
     }
@@ -252,7 +253,7 @@ public class Game implements DeckSignal, Referee, Loggeable {
                     winner = botProfil;
                 }
             }
-            for(BotProfil botProfil : botProfiles) {
+            for (BotProfil botProfil : botProfiles) {
                 if (winner != botProfil) {
                     statistiqueManager.addLoser(botProfil.getBot());
                 }
@@ -263,19 +264,19 @@ public class Game implements DeckSignal, Referee, Loggeable {
         return winner;
     }
 
-    public List<Objective> getMyObjectives(Playable bot){
+    public List<Objective> getMyObjectives(Playable bot) {
 
-        for(BotProfil botProfil : botProfiles){
-            if(bot == botProfil.getBot()){
+        for (BotProfil botProfil : botProfiles) {
+            if (bot == botProfil.getBot()) {
                 return botProfil.getObjectives();
             }
         }
-        return Arrays.asList();
+        return List.of();
     }
 
     public void printWinner(BotProfil botProfil) {
-        if(botProfil==null){
-            LOGGER.fine("Match nul ! Aucun bot n'a su completer un objectif pendant "+ MAX_NB_ROUND +" tours");
+        if (botProfil == null) {
+            LOGGER.fine("Match nul ! Aucun bot n'a su completer un objectif pendant " + MAX_NB_ROUND + " tours");
             statistiqueManager.addMatchNul();
 
         } else {
@@ -284,16 +285,16 @@ public class Game implements DeckSignal, Referee, Loggeable {
     }
 
     public List<Bambou> getMyBambous(Playable bot) {
-        for(BotProfil botProfil : botProfiles){
-            if(botProfil.getBot()==bot)return botProfil.getBambous();
+        for (BotProfil botProfil : botProfiles) {
+            if (botProfil.getBot() == bot) return botProfil.getBambous();
         }
-        return Arrays.asList();
+        return List.of();
     }
 
     public void addBamboutToBot(Playable bot, Bambou bambou) {
-        for(BotProfil botProfil : botProfiles){
-            if(botProfil.getBot()==bot){
-                botProfil.addBanbou( bambou );
+        for (BotProfil botProfil : botProfiles) {
+            if (botProfil.getBot() == bot) {
+                botProfil.addBanbou(bambou);
             }
         }
     }
@@ -303,9 +304,9 @@ public class Game implements DeckSignal, Referee, Loggeable {
         return botProfiles.size();
     }
 
-    private void logValidatedObjective(Objective objective, String botName, BotProfil botProfil){
-        LOGGER.finer( ()-> "L'objectif suivant a été validé : " + objective );
-        LOGGER.finer( ()-> botName + " gagne " + objective.getPoint() + " points");
-        LOGGER.finer( ()-> "Le score de "+ botName +" = " + botProfil.getPoints() + " points");
+    private void logValidatedObjective(Objective objective, String botName, BotProfil botProfil) {
+        LOGGER.finer(() -> "L'objectif suivant a été validé : " + objective);
+        LOGGER.finer(() -> botName + " gagne " + objective.getPoint() + " points");
+        LOGGER.finer(() -> "Le score de " + botName + " = " + botProfil.getPoints() + " points");
     }
 }
